syntax = "proto3";

import "google/protobuf/timestamp.proto";

package com.example.directdebit.transaction;

option java_outer_classname = "TransactionDomain";


//state
message TransactionState {
  TransactionStatus status = 1;
  int32 debit_amount = 2;
}

enum TransactionStatus {
  UNKNOWN = 0;
  CREATED = 1;
  DEBIT_SCHEDULED = 2;
  DEBIT_STARTED = 3;
  DEBITED = 4;
  DEBIT_FAILED = 5;
}

//events
message Created {
  string trans_id = 1;
  string payment_id = 2;
  int32 debit_amount = 3;
  google.protobuf.Timestamp event_timestamp = 1000;
}
message Initialized {
  string trans_id = 1;
  string payment_id = 2;
  google.protobuf.Timestamp scheduled_for = 3;
  google.protobuf.Timestamp event_timestamp = 1000;
}
message DebitStarted {
  string trans_id = 1;
  string payment_id = 2;
  int32 debit_amount = 3;
  google.protobuf.Timestamp event_timestamp = 1000;
}
message Debited {
  string trans_id = 1;
  google.protobuf.Timestamp event_timestamp = 1000;
}
message DebitFailed {
  string trans_id = 1;
  string reason = 2;
  google.protobuf.Timestamp event_timestamp = 1000;
}


